--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ p {
 .boost {
   position: absolute;
   pointer-events: none;
-  animation: slideUp 800ms cubic-bezier(0.25, 1, 0.5, 1);;
+  animation: slideUp 800ms cubic-bezier(0.25, 1, 0.5, 1);
   opacity: 0;
   font-family: monospace;
   font-size: 15px;
@@ -143,8 +143,6 @@ p {
     opacity: 0;
     transform: translateY(-100px) translateX(-50%);
   }
-}
-  
 }
 
 .resetButton {
