a useless web project

--- a/style.css
+++ b/style.css
@@ -134,6 +134,31 @@ p {
   font-weight: bold;
 }
 
+.sitter {
+  position: fixed;
+  bottom: 15px;
+  font-family: monospace;
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.watch {
+  background: rgba(0, 0, 0, 0.07);
+  padding: 10px 15px;
+  border-radius: 22px;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.left {
+  left: 15px;
+}
+
+.right {
+  right: 15px;
+}
+
 @keyframes slideUp {
   0% {
     opacity: 1;
